--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,40 @@
 <resources>
     <string name="app_name">Currency Rate</string>
     <string name="converter_button">Конвертер</string>
+    <string-array name="valute_codes">
+        <item>AUD</item>
+        <item>AZN</item>
+        <item>GBP</item>
+        <item>AMD</item>
+        <item>BYN</item>
+        <item>BGN</item>
+        <item>BRL</item>
+        <item>HUF</item>
+        <item>HKD</item>
+        <item>DKK</item>
+        <item>USD</item>
+        <item>EUR</item>
+        <item>INR</item>
+        <item>KZT</item>
+        <item>CAD</item>
+        <item>KGS</item>
+        <item>CNY</item>
+        <item>MDL</item>
+        <item>NOK</item>
+        <item>PLN</item>
+        <item>RON</item>
+        <item>XDR</item>
+        <item>SGD</item>
+        <item>TJS</item>
+        <item>TRY</item>
+        <item>TMT</item>
+        <item>UZS</item>
+        <item>UAH</item>
+        <item>CZK</item>
+        <item>SEK</item>
+        <item>CHF</item>
+        <item>ZAR</item>
+        <item>KRW</item>
+        <item>JPY</item>
+    </string-array>
 </resources>
